[package]
name = "mfhebrk"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1

[profile.dev]
lto = "fat"
opt-level = 3
codegen-units = 1
debug = true

[dependencies]
concrete-commons = "0.2.0"
concrete-core = { version = "1.0.0-beta", features = ["serde_serialize"]}
concrete-npe = "0.2.1"
concrete-csprng = "0.2.2"
concrete = "0.1.11" 
concrete-boolean = "0.1.0" 
csv = "1.1"
rand = "0.8"
num-traits = "0.2"
chrono = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true}
clap = { version = "3", features = ["derive"] }
rayon = "1.5"
bitvec = "1"
bincode = "1.2.1"
get-size = { version = "^0.1", features = ["derive"] }
sysinfo = "0.28.1"

[dev-dependencies]
criterion = "0.3"

[features]
serde_serialize = ["serde"]